Added code to plot graphs over time

--- a/src/main/resources/index-dev.html
+++ b/src/main/resources/index-dev.html
@@ -6,8 +6,8 @@
 </head>
 <body style="margin: 0px">
 
-<div>
-    <canvas id="canvas" width="256" height="256" style="display: block"></canvas>
+<div style="height: 512px; width: 512px">
+    <canvas id="canvas" style="display: block"></canvas>
 </div>
 
 <script src="../example-fastopt.js"></script>
