--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body style="margin: 20px">
 <a href="html/sierpinski-triangle.html"><h2>Sierpinski triangle</h2></a>
+<a href="html/sierpinski-carpet.html"><h2>Sierpinski carpet</h2></a>
 </body>
 </html>
