--- a/src/main/resources/index-dev.html
+++ b/src/main/resources/index-dev.html
@@ -4,7 +4,7 @@
     <title>Example Scala.js application</title>
     <meta charset="UTF-8">
 </head>
-<body style="margin: 0px; background-color: black">
+<body style="margin: 0px">
 
 <div>
     <canvas id="canvas" width="256" height="256" style="display: block"></canvas>
