Copied outputs to a static location and added a link

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body style="margin: 20px">
 <a href="html/sierpinski-triangle.html"><h2>Sierpinski triangle</h2></a>
 <a href="html/sierpinski-carpet.html"><h2>Sierpinski carpet</h2></a>
+<a href="html/plotting-graphs.html"><h2>Plotting graphs</h2></a>
 </body>
 </html>
